new field "original title" for translated books. All underlying logic but no UI yet.

--- a/app/src/main/res/xml/preferences_field_visibility.xml
+++ b/app/src/main/res/xml/preferences_field_visibility.xml
@@ -244,5 +244,12 @@
             android:summaryOn="@string/yes"
             android:title="@string/lbl_table_of_content" />
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.title_original_lang"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_original_title" />
+
     </com.hardbacknutter.nevertoomanybooks.settings.widgets.ExtPreferenceCategory>
 </PreferenceScreen>
