--- a/app/src/main/res/layout-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-land/fragment_book_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -103,13 +103,24 @@
             tools:text="@sample/data.json/book/title"
             />
 
+        <TextView
+            android:id="@+id/original_title"
+            style="@style/Field.BookTitle.Small"
+            android:layout_marginStart="@dimen/field_margin_start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:ignore="SelectableText"
+            tools:text="@sample/data.json/book/title"
+            />
+
         <RatingBar
             android:id="@+id/rating"
             style="@style/Field.RatingBar.Indicator"
             android:layout_marginStart="@dimen/field_margin_inline"
             app:layout_constraintEnd_toStartOf="@id/btn_show_toc"
             app:layout_constraintStart_toEndOf="@id/read"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <CheckBox
@@ -117,14 +128,14 @@
             style="@style/Field.Checkable"
             android:text="@string/lbl_read"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <Button
             android:id="@+id/btn_show_toc"
             style="@style/Button.Action.OpenToc"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             tools:visibility="visible"
             />
 
