--- a/app/src/main/res/layout-sw800dp-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-sw800dp-land/fragment_book_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -102,12 +102,23 @@
             tools:text="@sample/data.json/book/title"
             />
 
+        <TextView
+            android:id="@+id/original_title"
+            style="@style/Field.BookTitle.Small"
+            android:layout_marginStart="@dimen/field_margin_start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:ignore="SelectableText"
+            tools:text="@sample/data.json/book/title"
+            />
+
         <CheckBox
             android:id="@+id/read"
             style="@style/Field.Checkable"
             android:text="@string/lbl_read"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <RatingBar
@@ -117,7 +128,7 @@
             app:layout_constraintEnd_toStartOf="@id/col2"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toEndOf="@id/read"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <TextView
@@ -186,7 +197,7 @@
             style="@style/Label"
             android:text="@string/lbl_genre"
             app:layout_constraintStart_toEndOf="@id/col2"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <TextView
