--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -38,7 +38,7 @@
             android:id="@id/cover_image_0"
             style="@style/CoverImage.Details.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             tools:ignore="ContentDescription"
             tools:src="@sample/covers"
             />
@@ -93,11 +93,22 @@
             tools:text="@sample/data.json/book/title"
             />
 
+        <TextView
+            android:id="@+id/original_title"
+            style="@style/Field.BookTitle.Small"
+            android:layout_marginStart="@dimen/field_margin_start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:ignore="SelectableText"
+            tools:text="@sample/data.json/book/title"
+            />
+
         <RatingBar
             android:id="@+id/rating"
             style="@style/Field.RatingBar.Indicator"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/original_title"
             />
 
         <CheckBox
