--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -209,6 +209,7 @@
             android:icon="@drawable/ic_baseline_visibility_24"
             android:key="psk_fields_visibility"
             android:title="@string/pt_field_visibility"
+            android:summary="@string/ps_manage_fields"
             />
 
         <SwitchPreference
