--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -61,12 +61,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:layout="@layout/fragment_edit_book_toc"
             />
 
         <com.hardbacknutter.nevertoomanybooks.core.widgets.MovableFloatingActionButton
             android:id="@+id/fab"
-            style="@style/Widget.App.FloatingActionButton"
+            style="@style/FAB.Main"
             android:visibility="invisible"
+            app:icon="@drawable/ic_baseline_add_24"
             tools:visibility="visible"
             />
 
