--- a/app/src/main/res/xml/preferences_site_amazon.xml
+++ b/app/src/main/res/xml/preferences_site_amazon.xml
@@ -32,6 +32,14 @@
             android:title="@string/lbl_website_address" />
 
         <SwitchPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_baseline_shop_24"
+            android:key="amazon.search.shopping.menu"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/pt_search_show_shopping_options" />
+
+        <SwitchPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_barcode"
             android:key="amazon.search.byIsbn.prefer.10"
