--- a/app/src/main/res/xml/preferences_barcodes.xml
+++ b/app/src/main/res/xml/preferences_barcodes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -29,6 +29,14 @@
             android:key="camera.lens.facing"
             android:title="@string/pt_camera_lens_facing"
             />
+
+        <ListPreference
+            android:defaultValue="1"
+            android:entries="@array/pe_scan_mode_single"
+            android:entryValues="@array/pv_scan_mode_single"
+            android:icon="@drawable/ic_barcode"
+            android:key="scan.mode.single"
+            android:title="@string/pt_scan_mode" />
 
         <SwitchPreference
             android:defaultValue="true"
