--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -51,8 +51,8 @@
 
     <dimen name="cbx_fixed_width_author_type">140dp</dimen>
 
-    <dimen name="btn_open_toc_width">@dimen/wrap_content</dimen>
-    <dimen name="btn_open_toc_height">@dimen/wrap_content</dimen>
-    <dimen name="btn_open_toc_text_size">14sp</dimen>
+    <!--    <dimen name="btn_open_toc_width">@dimen/wrap_content</dimen>-->
+    <!--    <dimen name="btn_open_toc_height">@dimen/wrap_content</dimen>-->
+    <!--    <dimen name="btn_open_toc_text_size">14sp</dimen>-->
 
 </resources>
